--- a/templates/base.html
+++ b/templates/base.html
@@ -151,7 +151,7 @@
 
     
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Fitness+</a>
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Eduteria</a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -177,13 +177,13 @@
           <li class="nav-item">
             <a class="nav-link" href="#">
               {% icon "user-check" class="align-text-bottom" %}
-              Trainers
+              Teachers
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
               {% icon "user" class="align-text-bottom" %}
-              Members
+              Students
             </a>
           </li>
           <li class="nav-item">
@@ -208,12 +208,6 @@
             <a class="nav-link" href="#">
                {% icon "pocket" class="align-text-bottom" %}
               Wallets
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              {% icon "shopping-bag" class="align-text-bottom" %}
-              Store
             </a>
           </li>
           <li class="nav-item">
