--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block content %}Dashboard{% endblock %}
+{% block title %}Dashboard{% endblock %}
 {% block content %}
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
@@ -16,26 +16,54 @@
         </div>
         </div>
 
-        <h2>Newest Customers</h2>
+        <h2>Students</h2>
         <div class="table-responsive">
             <table class="table table-striped table-sm">
                 <thead>
                     <tr>
-                        <th scope="col">Date Registered</th>
-                        <th scope="col">First Name</th>
-                        <th scope="col">Surname</th>
-                        <th scope="col">Phone No.</th>
-                        <th scope="col">Email</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Class</th>
+                        <th scope="col">Parent's Name</th>
+                        <th scope="col">Parent's Phone No.</th>
+                        <th scope="col">Gender</th>
                     </tr>
                 </thead>
                 <tbody>
+                    {% for student in students %}
+                        <tr>
+                            <td>{{ student.name }}</td>
+                            <td>{{ student.current_class }}</td>
+                            <td>{{ student.parent_name }}</td>
+                            <td>{{ student.parent_phone_number }}</td>
+                            <td>{{ student.gender }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <h2>Teachers</h2>
+        <div class="table-responsive">
+            <table class="table table-striped table-sm">
+                <thead>
                     <tr>
-                        <td>1,001</td>
-                        <td>random</td>
-                        <td>data</td>
-                        <td>placeholder</td>
-                        <td>text</td>
+                        <th scope="col">Name</th>
+                        <th scope="col">ID</th>
+                        <th scope="col">Subject</th>
+                        <th scope="col">Phone No.</th>
+                        <th scope="col">Gender</th>
                     </tr>
+                </thead>
+                <tbody>
+                    {% for teacher in teachers %}
+                        <tr>
+                            <td>{{ teacher.name }}</td>
+                            <td>{{ teacher.teacher_id }}</td>
+                            <td>{{ teacher.subject }}</td>
+                            <td>{{ teacher.phone_number }}</td>
+                            <td>{{ teacher.gender }}</td>
+                        </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
