--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                         <th scope="col">Class</th>
                         <th scope="col">Parent's Name</th>
                         <th scope="col">Parent's Phone No.</th>
-                        <th scope="col">Gender</th>
+                        <th scope="col">ID</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -35,7 +35,7 @@
                             <td>{{ student.current_class }}</td>
                             <td>{{ student.parent_name }}</td>
                             <td>{{ student.parent_phone_number }}</td>
-                            <td>{{ student.gender }}</td>
+                            <td>{{ student.id }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
@@ -62,6 +62,53 @@
                             <td>{{ teacher.subject }}</td>
                             <td>{{ teacher.phone_number }}</td>
                             <td>{{ teacher.gender }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <h2>Payments</h2>
+        <div class="table-responsive">
+            <table class="table table-striped table-sm">
+                <thead>
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Amount</th>
+                        <th scope="col">Payment For</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Confirmed By</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for payment in payments %}
+                        <tr>
+                            <td>{{ payment.student }}</td>
+                            <td>{{ payment.amount }}</td>
+                            <td>{{ payment.payment_for }}</td>
+                            <td>{{ payment.date_of_payment }}</td>
+                            <td>{{ payment.confirmed_by }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <h2>Reports</h2>
+        <div class="table-responsive">
+            <table class="table table-striped table-sm">
+                <thead>
+                    <tr>
+                        <th scope="col">Student</th>
+                        <th scope="col">Teacher</th>
+                        <th scope="col">Session</th>
+                </thead>
+                <tbody>
+                    {% for report in reports %}
+                        <tr>
+                            <td>{{ report.student }}</td>
+                            <td>{{ report.teacher }}</td>
+                            <td>{{ report.session_id }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
