--- a/templates/reports.html
+++ b/templates/reports.html
@@ -1,40 +1,35 @@
 {% extends 'base.html' %}
 {% load icon %}
-{% block title %}Students{% endblock %}
+{% block title %}Reports{% endblock %}
 {% block content %}
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Students</h1>
+            <h1 class="h2">Reports</h1>
             <div class="btn-toolbar mb-2 mb-md-0">
                 <div class="btn-group me-2">
                     <button type="button" class="btn btn-sm btn-primary">
                         {% icon "plus" class="align-text-bottom" %}
-                        Add New Student
+                        Add New Report
                     </button>
                 </div>
             </div>
         </div>
 
-        <h2>Students</h2>
+        <h2>Reports</h2>
         <div class="table-responsive">
             <table class="table table-striped table-sm">
                 <thead>
                     <tr>
-                        <th scope="col">Name</th>
-                        <th scope="col">Class</th>
-                        <th scope="col">Parent's Name</th>
-                        <th scope="col">Parent's Phone No.</th>
-                        <th scope="col">ID</th>
-                    </tr>
+                        <th scope="col">Student</th>
+                        <th scope="col">Teacher</th>
+                        <th scope="col">Session</th>
                 </thead>
                 <tbody>
-                    {% for student in students %}
+                    {% for report in reports %}
                         <tr>
-                            <td>{{ student.name }}</td>
-                            <td>{{ student.current_class }}</td>
-                            <td>{{ student.parent_name }}</td>
-                            <td>{{ student.parent_phone_number }}</td>
-                            <td>{{ student.id }}</td>
+                            <td>{{ report.student }}</td>
+                            <td>{{ report.teacher }}</td>
+                            <td>{{ report.session_id }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
