Added forms.py for the finance app, created the template for adding and viewing payments, updated the views and urls to make it accessible to the user

--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -1,5 +1,10 @@
-<h1>Add Student</h1>
-<form method="POST">{% csrf_token %}
-    {{ form }}
-    <button class="btn btn-primary" type="submit">Save</button>
-</form>
+{% extends 'base.html' %}
+{% block content %}
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <h1>Add Student</h1>
+        <form method="POST">{% csrf_token %}
+            {{ form.as_p }}
+            <button class="btn btn-primary" type="submit">Save</button>
+        </form>
+    </main>
+{% endblock %}
