--- a/templates/add_payment.html
+++ b/templates/add_payment.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-        <h1>Add Report</h1>
+        <h1>Add Payment</h1>
         <form method="POST">{% csrf_token %}
             {{ form.as_p }}
             <button class="btn btn-primary" type="submit">Save</button>
