--- a/templates/teachers.html
+++ b/templates/teachers.html
@@ -6,12 +6,14 @@
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">Teachers</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
-            <div class="btn-group me-2">
-                <button type="button" class="btn btn-sm btn-primary">
-                    {% icon "plus" class="align-text-bottom" %}
-                    Add New Teacher
-                </button>
-            </div>
+            <a href="{% url 'add-teacher' %}">
+                <div class="btn-group me-2">
+                    <button type="button" class="btn btn-sm btn-primary">
+                        {% icon "plus" class="align-text-bottom" %}
+                        Add New Teacher
+                    </button>
+                </div>
+            </a>
         </div>
         </div>
 
